2006-11-12  Stephen Deasey  <sd@users.sf.net>

        * configure.in:
	* nsd/sls.c:
	* nsd/tcltime.c:
	* nsd/unix.c: Quiten some compiler alias warnings, including some
	ugly casts in tcltime.c.

        * configure.in:
	* nsd/info.c:
	* nsthread/nsthreadtest.c: Check for presence of Tcl_GetMemoryInfo
	in Tcl library. This isn't exported when Tcl is built with the
	custom memory allocator dissabled.

	* include/ns.h:
	* nsd/nsd.h
	* nsd/sls.c:
	* nsd/tclcmds.c:
	* nsd/driver.c:
	* nsd/init.c:
	* nsd/Makefile:
	* doc/src/mann/ns_sls.man:
	* tests/ns_sls.test: Add Ns_Sls* and ns_sls commands supporting
	socket-local-storage (data which persists for the lifetime of an
	open TCP connection). Fixes Bug #1522162.

2006-11-09  Bernd Eidenschink  <eide@users.sf.net>

	* nsd-config.tcl: Added config parameter smtpauthmode
	* tcl/sendmail.tcl: smtpauthmode param now case-insensitive

2006-11-09  Bernd Eidenschink  <eide@users.sf.net>

	* tcl/sendmail.tcl: Added AUTH LOGIN support (which is very similar
	to AUTH PLAIN) to ns_sendmail command
	* doc/src/ns_sendmail.man: Updated documentation for ns_sendmail

2006-10-30  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed bug with not handling partial
	writes in writer thread

        * nsd/tcljob.c: Exteneded job API to support ns_job exists
        command and allow to specify jobid in ns_job queue command

2006-11-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Nsproxy_Init initializes thread-wide
	data while Ns_ProxyInit initializes only the Tcl interface.

2006-11-01  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/log.c: LogFlush now accepts one extra argument that
	controls internal locking. Previously, the locking was
	done based on the value of the passed callback list and
	that was not correct.

2006-10-30  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/set/c: Updated Ns_SetGetValue/Ns_SetIGetValue  to return default