@@ -156,7 +156,6 @@ dist: clean
 	$(MKDIR) naviserver-$(NS_PATCH_LEVEL)
 	$(CP) $(distfiles) naviserver-$(NS_PATCH_LEVEL)
 	$(RM) naviserver-$(NS_PATCH_LEVEL)/include/{config.h,nsversion.h,Makefile.global,Makefile.module,stamp-h1}
-	find naviserver-$(NS_PATCH_LEVEL) \( -name CVS -o -name ".#*" -o -name "*~" -o -name "#*#" \) -depth -exec $(RM) {} \;
 	tar czf naviserver-$(NS_PATCH_LEVEL).tar.gz naviserver-$(NS_PATCH_LEVEL)
 	$(RM) naviserver-$(NS_PATCH_LEVEL)
 
